# evins_ros_docker

./: .gitmodules  README.md  TODO
docker/: .tmux.conf  .zsh_prompt  .zshenv  .zshrc  Dockerfile  bashrc  compile-container  docker-compose.yaml  hosts  ros_entrypoint.sh  ros_entrypoint.zsh  roslaunch-container  run-generic-container  run-sim-container
docker/.zsh/function/: vi-add-numeric  vi-substract-numeric  zsh-directory-name
nodes/missions/: CMakeLists.txt  package.xml
nodes/missions/polling/etc/: fsm.conf.m4.mux.polling  gen  runrc
nodes/missions/polling/launch/: auv.launch  modem.launch  ship.launch
