<?xml version="1.1"?>
<package>
  <name>missions</name>
  <version>1.0.0</version>
  <description>missions folder, for all the launch files needed by the consortium</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="todo@todo.todo">todo</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
